@@ -25,17 +25,15 @@ application {
 jlink {
     imageName.set(project.name)
     moduleName.set(application.mainModule)
-    options = ["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages", "--add-modules",
+    options = ["--strip-debug", "--no-header-files", "--no-man-pages", "--add-modules",
                "java.naming,is.codion.plugin.logback.proxy"]
 
     launcher {
         jvmArgs = applicationDefaultJvmArgs
-        jvmArgs += ["--add-reads", "world.merged.module=org.slf4j"]//for sslcontext-kickstart
     }
 
     jpackage {
         imageName = "World-Server-Monitor"
-        appVersion = project.version.replace("-SNAPSHOT", "")
         if (org.gradle.internal.os.OperatingSystem.current().linux) {
             installerType = "deb"
             icon = "../world.png"
